# AI-Undesirable

./: .gitignore  README.md  main.py  pyproject.toml
api_v1/: __init__.py  router_moderation.py
core/settings/: config.py
exceptions/: exceptions.py
services/: api_deep.py  exceptions.py
